# betterinformatics-files

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.old  README.md  cinit.yml  deployments.yml  docker-compose.observability.yml  docker-compose.yml  mise.toml  renovate.json  sip.yml  start.sh  visdev_mount.py
backend/: .env.development  .gitignore  .pre-commit-config.yaml  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  rewrite_progress.txt
backend/answers/: models.py  pdf_utils.py  section_util.py  urls.py  views.py  views_answers.py  views_comments.py  views_cuts.py  views_files.py  views_listings.py  views_search.py
backend/backend/: debugging.py  settings.py  urls.py  views.py
backend/categories/: models.py  tests.py  urls.py  views.py
backend/dissertations/: api.py  apps.py  models.py  pdf_redactor.py  urls.py  views.py
backend/documents/: models.py  tests.py  urls.py  views.py
backend/ediauth/: apps.py  auth_backend.py  auth_check.py  models.py  tests.py  urls.py  views.py
backend/faq/: tests.py  urls.py  views.py
backend/favourites/: models.py  urls.py  views.py
backend/feedback/: api.py  models.py  tests.py  urls.py  views.py
backend/filestore/: models.py  tests.py  urls.py  views.py
backend/frontend/: urls.py  views.py
backend/health/: urls.py  views.py
backend/images/: api.py  models.py  tests.py  views.py
backend/mongodb_migration/: README.md  apps.py
backend/myauth/: auth_backend.py  auth_check.py  models.py  people_auth.py  tests.py  urls.py  views.py
backend/notifications/: models.py  notification_util.py  tests.py  views.py
backend/payments/: models.py  tests.py  views.py
(+554 files in other folders)
