[project]
name = "community-solutions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4==4.9.3",
    "boto3==1.17.112",
    "django==4.1.13",
    "django-csp==3.7",
    "django-probes==1.7.0",
    "django-prometheus==2.2.0",
    "gevent==23.7.0",
    "gunicorn==20.1.0",
    "jwcrypto==1.4.2",
    "opentelemetry-exporter-otlp==1.36.0",
    "opentelemetry-instrumentation-django==0.57b0",
    "opentelemetry-instrumentation-psycopg2==0.57b0",
    "opentelemetry-sdk==1.36.0",
    "psycogreen==1.0.2",
    "psycopg2-binary==2.8.6",
    "pyroscope-io==0.8.11 ; sys_platform != 'win32'",
    "pyroscope-otel==0.4.1 ; sys_platform != 'win32'",
    "pyyaml==6.0.2",
    "requests==2.25.1",
]
